# demo-rust-postgresql

./: .clever.json  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
clevercloud/: rust.json
migrations/: 0001_create_incidents.sql
src/: db.rs  handlers.rs  main.rs  models.rs
templates/: base.html  detail.html  index.html  new.html  stats.html
