[package]
name = "incident-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "incident-tracker"
path = "src/main.rs"

[dependencies]
axum          = "0.7"
tokio         = { version = "1", features = ["full"] }
sqlx          = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde         = { version = "1", features = ["derive"] }
askama        = "0.12"
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = "0.4"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy       = "0.15"
tower-http    = { version = "0.5", features = ["trace"] }

[profile.release]
opt-level = 1
